Archive2/9b/475010206c3ef3/output
In file included from main.cpp:1:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/type_traits:1857:15: error: only enumeration types have underlying types
      typedef __underlying_type(_Tp) type;
              ^
main.cpp:6:30: note: in instantiation of template class 'std::underlying_type<int>' requested here
  typename U = typename std::underlying_type<T>::type
                             ^
main.cpp:8:6: note: in instantiation of default argument for 'func<int, nullptr>' required here
void func () { }
     ^~~~~~~~~~~
main.cpp:8:6: note: while substituting deduced template arguments into function template 'func' [with T = int, $1 = <no value>, U = <no value>]
void func () { }
     ^
1 error generated.
